fix: patch windows-drive-letter, replace wmic with fsutil
pending PR https://github.com/mrmlnc/windows-drive-letters/pull/6

--- a/package.json
+++ b/package.json
@@ -83,5 +83,8 @@
 			"eslint"
 		]
 	},
-	"packageManager": "yarn@4.1.1"
+	"packageManager": "yarn@4.1.1",
+	"resolutions": {
+		"windows-drive-letters@npm:^4.0.0": "patch:windows-drive-letters@npm%3A4.0.0#~/.yarn/patches/windows-drive-letters-npm-4.0.0-7868bcf5a2.patch"
+	}
 }
