--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "package-manager-monorepo",
 	"version": "1.0.0",
-	"repository": "https://github.com/nrkno/tv-automation-package-manager",
+	"repository": "https://github.com/Sofie-Automation/sofie-package-manager",
 	"private": true,
 	"workspaces": [
 		"shared/**",
@@ -20,15 +20,15 @@
 		"build:changed": "lerna run build --since head --exclude-dependents --stream",
 		"lint": "lerna exec --parallel --no-bail -- run -T eslint . --ext .ts,.tsx",
 		"lintfix": "yarn lint --fix",
-		"lint:changed": "lerna exec --since origin/master --include-dependents -- eslint . --ext .js,.jsx,.ts,.tsx",
+		"lint:changed": "lerna exec --since origin/main --include-dependents -- eslint . --ext .js,.jsx,.ts,.tsx",
 		"test": "yarn test:prepare && lerna run test --stream",
 		"test:ci": "yarn test:prepare && lerna run test --stream",
-		"test:changed": "yarn test:prepare && lerna run --since origin/master --include-dependents test",
+		"test:changed": "yarn test:prepare && lerna run --since origin/main --include-dependents test",
 		"test:update": "yarn test:prepare && lerna run test -- -u",
-		"test:update:changed": "yarn test:prepare && lerna run --since origin/master --include-dependents test -- -u",
+		"test:update:changed": "yarn test:prepare && lerna run --since origin/main --include-dependents test -- -u",
 		"test:prepare": "node scripts/prepare-for-tests.mjs",
 		"typecheck": "lerna exec -- tsc --noEmit",
-		"typecheck:changed": "lerna exec --since origin/master --include-dependents -- tsc --noEmit",
+		"typecheck:changed": "lerna exec --since origin/main --include-dependents -- tsc --noEmit",
 		"build-win32": "node scripts/prepare-for-build32.js && lerna run build-win32 --stream && node scripts/cleanup-after-build32.mjs",
 		"build-win32:ci": "node scripts/prepare-for-build32.js && lerna run build-win32 --stream --concurrency=1 && node scripts/cleanup-after-build32.mjs",
 		"gather-built": "node scripts/gather-all-built.mjs",
