--- a/apps/_boilerplate/app/package.json
+++ b/apps/_boilerplate/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@boilerplate/app",
-    "version": "1.50.2",
+    "version": "1.50.8",
     "description": "Boilerplate",
     "private": true,
     "scripts": {
@@ -11,7 +11,7 @@
         "start": "node dist/index.js"
     },
     "dependencies": {
-        "@boilerplate/generic": "1.50.2"
+        "@boilerplate/generic": "^1.50.8"
     },
     "prettier": "@sofie-automation/code-standard-preset/.prettierrc.json",
     "engines": {
