--- a/apps/appcontainer-node/packages/generic/package.json
+++ b/apps/appcontainer-node/packages/generic/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@appcontainer-node/generic",
-    "version": "1.50.6",
+    "version": "1.50.8",
     "private": true,
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -14,8 +14,8 @@
         "typescript": "*"
     },
     "dependencies": {
-        "@sofie-package-manager/api": "1.50.6",
-        "@sofie-package-manager/worker": "1.50.6",
+        "@sofie-package-manager/api": "^1.50.8",
+        "@sofie-package-manager/worker": "^1.50.8",
         "underscore": "^1.12.0"
     },
     "devDependencies": {
