--- a/apps/single-app/app/package.json
+++ b/apps/single-app/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@single-app/app",
-    "version": "1.50.7",
+    "version": "1.50.8",
     "description": "Package Manager, http-proxy etc.. all in one application",
     "private": true,
     "scripts": {
@@ -16,13 +16,13 @@
         "typescript": "*"
     },
     "dependencies": {
-        "@appcontainer-node/generic": "1.50.6",
-        "@http-server/generic": "1.50.7",
-        "@package-manager/generic": "1.50.6",
-        "@quantel-http-transformer-proxy/generic": "1.50.6",
-        "@sofie-package-manager/api": "1.50.6",
-        "@sofie-package-manager/worker": "1.50.6",
-        "@sofie-package-manager/workforce": "1.50.6",
+        "@appcontainer-node/generic": "^1.50.8",
+        "@http-server/generic": "^1.50.8",
+        "@package-manager/generic": "^1.50.8",
+        "@quantel-http-transformer-proxy/generic": "^1.50.8",
+        "@sofie-package-manager/api": "^1.50.8",
+        "@sofie-package-manager/worker": "^1.50.8",
+        "@sofie-package-manager/workforce": "^1.50.8",
         "underscore": "^1.12.0"
     },
     "prettier": "@sofie-automation/code-standard-preset/.prettierrc.json",
