--- a/apps/workforce/app/package.json
+++ b/apps/workforce/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@workforce/app",
-    "version": "1.50.6",
+    "version": "1.50.8",
     "description": "Boilerplace",
     "private": true,
     "scripts": {
@@ -11,7 +11,7 @@
         "start": "node dist/index.js"
     },
     "dependencies": {
-        "@workforce/generic": "1.50.6"
+        "@workforce/generic": "^1.50.8"
     },
     "prettier": "@sofie-automation/code-standard-preset/.prettierrc.json",
     "engines": {
