fix: docker images using CMD instead of ENTRYPOINT

--- a/apps/package-manager/app/Dockerfile
+++ b/apps/package-manager/app/Dockerfile
@@ -48,4 +48,4 @@ WORKDIR /src/apps/package-manager/app
 ENV package-manager_PORT=8070
 EXPOSE 8070
 
-CMD ["yarn", "start"]
+ENTRYPOINT ["yarn", "start"]
