--- a/apps/quantel-http-transformer-proxy/app/Dockerfile
+++ b/apps/quantel-http-transformer-proxy/app/Dockerfile
@@ -52,4 +52,4 @@ ENV QUANTEL_HTTP_TRANSFORMER_PROXY_PORT=8080
 # ENV QUANTEL_HTTP_TRANSFORMER_RATE_LIMIT_MAX=
 EXPOSE 8080
 
-CMD ["yarn", "start"]
+ENTRYPOINT ["yarn", "start"]
