--- a/apps/http-server/packages/generic/package.json
+++ b/apps/http-server/packages/generic/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@http-server/generic",
-	"version": "1.52.0-alpha.5",
+	"version": "1.52.0",
 	"private": true,
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -11,7 +11,7 @@
 	},
 	"dependencies": {
 		"@koa/cors": "^5.0.0",
-		"@sofie-package-manager/api": "1.52.0-alpha.5",
+		"@sofie-package-manager/api": "1.52.0",
 		"koa": "^2.16.1",
 		"koa-bodyparser": "^4.3.0",
 		"koa-range": "^0.3.0",
