--- a/shared/packages/api/package.json
+++ b/shared/packages/api/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@sofie-package-manager/api",
-    "version": "1.52.0-alpha.5",
+    "version": "1.52.0",
     "main": "dist/index",
     "types": "dist/index",
     "files": [
