--- a/shared/packages/worker/package.json
+++ b/shared/packages/worker/package.json
@@ -20,6 +20,7 @@
 		"@types/deep-diff": "^1.0.0",
 		"@types/node-fetch": "^2.5.8",
 		"@types/proper-lockfile": "^4.1.4",
+		"@types/ssh2-sftp-client": "^9.0.4",
 		"@types/tmp": "~0.2.2",
 		"@types/ws": "^8.5.4",
 		"jest": "*",
@@ -31,11 +32,14 @@
 		"@sofie-package-manager/api": "1.52.0-alpha.5",
 		"abort-controller": "^3.0.0",
 		"atem-connection": "^3.2.0",
+		"basic-ftp": "^5.0.5",
 		"csv-parser": "^3.0.0",
 		"deep-diff": "^1.0.2",
 		"form-data": "^4.0.0",
 		"node-fetch": "^2.6.1",
+		"p-queue": "^8.1.0",
 		"proper-lockfile": "^4.1.2",
+		"ssh2-sftp-client": "^12.0.1",
 		"tmp": "~0.2.1",
 		"tv-automation-quantel-gateway-client": "4.0.0",
 		"type-fest": "3.13.1",
