--- a/apps/single-app/app/package.json
+++ b/apps/single-app/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@single-app/app",
-    "version": "1.52.0",
+    "version": "1.53.0-alpha.0",
     "description": "Package Manager, http-proxy etc.. all in one application",
     "private": true,
     "scripts": {
@@ -16,13 +16,13 @@
         "typescript": "*"
     },
     "dependencies": {
-        "@appcontainer-node/generic": "1.52.0",
-        "@http-server/generic": "1.52.0",
-        "@package-manager/generic": "1.52.0",
-        "@quantel-http-transformer-proxy/generic": "1.52.0",
-        "@sofie-package-manager/api": "1.52.0",
-        "@sofie-package-manager/worker": "1.52.0",
-        "@sofie-package-manager/workforce": "1.52.0",
+        "@appcontainer-node/generic": "1.53.0-alpha.0",
+        "@http-server/generic": "1.53.0-alpha.0",
+        "@package-manager/generic": "1.53.0-alpha.0",
+        "@quantel-http-transformer-proxy/generic": "1.53.0-alpha.0",
+        "@sofie-package-manager/api": "1.53.0-alpha.0",
+        "@sofie-package-manager/worker": "1.53.0-alpha.0",
+        "@sofie-package-manager/workforce": "1.53.0-alpha.0",
         "underscore": "^1.12.0"
     },
     "prettier": "@sofie-automation/code-standard-preset/.prettierrc.json",
