--- a/shared/packages/expectationManager/package.json
+++ b/shared/packages/expectationManager/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@sofie-package-manager/expectation-manager",
-    "version": "1.52.0",
+    "version": "1.53.0-alpha.0",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "license": "MIT",
@@ -18,8 +18,8 @@
         "type-fest": "3.13.1"
     },
     "dependencies": {
-        "@sofie-package-manager/api": "1.52.0",
-        "@sofie-package-manager/worker": "1.52.0",
+        "@sofie-package-manager/api": "1.53.0-alpha.0",
+        "@sofie-package-manager/worker": "1.53.0-alpha.0",
         "@supercharge/promise-pool": "^3.2.0",
         "underscore": "^1.12.0"
     },
