--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -55,8 +55,8 @@ jobs:
             for FILE in deploy/*.exe; do
               echo "Trying to sign ${FILE}"
               # This path is a bit fragile, but necessary as no signtool is on the path.
-              # If this path breaks, then find what versions of windows kits are installed in the updated runner image https://github.com/actions/runner-images#available-images
-              'C:/Program Files (x86)/Windows Kits/10/bin/10.0.17763.0/x86/signtool.exe' sign //fd SHA256 //f certificate.pfx //p "${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}" $FILE
+              # If this path breaks, then find what versions of windows kits (under "Installed Windows SDKs") are installed in the updated runner image https://github.com/actions/runner-images#available-images
+              'C:/Program Files (x86)/Windows Kits/10/bin/10.0.26100.0/x86/signtool.exe' sign //fd SHA256 //f certificate.pfx //p "${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}" $FILE
             done
           else
             echo "No certificate found"
