--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"lerna": "^6.6.1",
 		"lint-staged": "^16.1.2",
 		"node-fetch": "^2.6.9",
+		"node-gyp": "^11.4.2",
 		"rimraf": "^5.0.5",
 		"ts-jest": "^29.0.3",
 		"typescript": "~4.9",
