fix: docker images using CMD instead of ENTRYPOINT (#219)

--- a/apps/workforce/app/Dockerfile
+++ b/apps/workforce/app/Dockerfile
@@ -51,5 +51,4 @@ WORKDIR /src/apps/workforce/app
 ENV WORKFORCE_PORT=8070
 EXPOSE 8070
 
-ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-CMD ["yarn", "start"]
+ENTRYPOINT ["/usr/bin/dumb-init", "--", "node", "dist/index.js"]
