--- a/.github/workflows/lint-and-test.yaml
+++ b/.github/workflows/lint-and-test.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: '18'
+          node-version: '24'
 
       - name: Enable Corepack
         run: corepack enable
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: ['18', '20']
+        node_version: ['20', '22', '24']
         os: [ubuntu-latest, windows-latest] # [windows-latest, macOS-latest]
     timeout-minutes: 10
     steps:
