--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -31,7 +31,7 @@ jobs:
         run: corepack enable
 
       - name: Prepare Environment
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
         env:
           CI: true
 
