--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -29,20 +29,18 @@ jobs:
       - name: Enable Corepack
         run: corepack enable
 
-      - name: Restore node_modules cache
+      - name: Cache node_modules
         uses: actions/cache@v4
         with:
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          path: |
-            ~/.yarn/cache
-            **/node_modules
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
       - name: Prepare Environment
         run: yarn
         env:
           CI: true
 
-      - name: Restore pkg/electron cache
+      - name: Cache pkg/electron binaries
         uses: actions/cache@v4
         with:
           key: ${{ runner.os }}-natives-${{ hashFiles('node_modules/**/expected-shas.json') }}-${{ hashFiles('node_modules/**/electron/package.json') }}
