--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
 		"node-gyp": "^11.4.2",
 		"rimraf": "^5.0.5",
 		"ts-jest": "^29.0.3",
-		"typescript": "~4.9",
+		"typescript": "^5.7.3",
 		"underscore": "^1.13.6"
 	},
 	"engines": {
