--- a/shared/packages/api/package.json
+++ b/shared/packages/api/package.json
@@ -23,6 +23,7 @@
         "rimraf": "^5.0.5"
     },
     "dependencies": {
+        "kairos-lib": "^0.2.0",
         "underscore": "^1.12.0",
         "winston": "^3.5.1",
         "ws": "^8.17.1",
