--- a/shared/packages/worker/package.json
+++ b/shared/packages/worker/package.json
@@ -36,6 +36,7 @@
 		"csv-parser": "^3.0.0",
 		"deep-diff": "^1.0.2",
 		"form-data": "^4.0.0",
+		"kairos-connection": "^0.2.0",
 		"node-fetch": "^2.6.1",
 		"p-queue": "^6.6.2",
 		"proper-lockfile": "^4.1.2",
