--- a/.github/workflows/lint-and-test.yaml
+++ b/.github/workflows/lint-and-test.yaml
@@ -59,7 +59,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: ['20', '22', '24']
+        node_version: ['24']
         os: [ubuntu-latest, windows-latest] # [windows-latest, macOS-latest]
     timeout-minutes: 15
     steps:
