--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -30,15 +30,33 @@ jobs:
       - name: Enable Corepack
         run: corepack enable
 
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            .yarn/cache
+            .yarn/install-state.gz
+            **/node_modules
+          key: ${{ runner.os }}-18-modules-${{ hashFiles('**/yarn.lock') }}
+
       - name: Prepare Environment
         run: yarn install --immutable
         env:
           CI: true
 
+      - name: Cache pkg/electron binaries
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-natives-${{ hashFiles('node_modules/**/expected-shas.json') }}-${{ hashFiles('node_modules/**/electron/package.json') }}
+          path: |
+            ${{ github.workspace }}/.cache
+
       - name: Run build
         env:
           CI: true
-          PKG_CACHE_PATH: ${{ runner.temp }}
+          ELECTRON_CACHE: ${{ github.workspace }}/.cache/electron
+          ELECTRON_BUILDER_CACHE: ${{ github.workspace }}/.cache/electron-builder
+          PKG_CACHE_PATH: ${{ github.workspace  }}/.cache/yao-pkg
         run: |
           # try and avoid timeout errors
 
