--- a/.github/workflows/lint-and-test.yaml
+++ b/.github/workflows/lint-and-test.yaml
@@ -30,6 +30,15 @@ jobs:
       - name: Enable Corepack
         run: corepack enable
 
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            .yarn/cache
+            .yarn/install-state.gz
+            **/node_modules
+          key: ${{ runner.os }}-18-modules-${{ hashFiles('**/yarn.lock') }}
+
       - name: Prepare Environment
         run: yarn install --immutable
         env:
@@ -50,9 +59,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: ['20', '22', '24']
+        node_version: ['24']
         os: [ubuntu-latest, windows-latest] # [windows-latest, macOS-latest]
-    timeout-minutes: 10
+    timeout-minutes: 15
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v5
@@ -64,6 +73,21 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
           cache: 'yarn'
+
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            .yarn/cache
+            .yarn/install-state.gz
+            **/node_modules
+          key: ${{ runner.os }}-${{ matrix.node_version }}-modules-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Cache ffmpeg binaries
+        uses: actions/cache@v4
+        with:
+          path: '.ffmpeg'
+          key: ${{ runner.os }}-ffmpeg-${{ hashFiles('**/ffmpegReleases.json') }}
 
       - name: Enable Corepack
         run: corepack enable
