--- a/shared/packages/worker/package.json
+++ b/shared/packages/worker/package.json
@@ -18,6 +18,7 @@
 	},
 	"devDependencies": {
 		"@types/deep-diff": "^1.0.0",
+		"@types/node": "^24",
 		"@types/node-fetch": "^2.5.8",
 		"@types/proper-lockfile": "^4.1.4",
 		"@types/ssh2-sftp-client": "^9.0.4",
