--- a/apps/appcontainer-node/packages/generic/package.json
+++ b/apps/appcontainer-node/packages/generic/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@appcontainer-node/generic",
-    "version": "1.53.0-alpha.4",
+    "version": "1.53.0",
     "private": true,
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -14,8 +14,8 @@
         "typescript": "*"
     },
     "dependencies": {
-        "@sofie-package-manager/api": "1.53.0-alpha.4",
-        "@sofie-package-manager/worker": "1.53.0-alpha.4",
+        "@sofie-package-manager/api": "1.53.0",
+        "@sofie-package-manager/worker": "1.53.0",
         "underscore": "^1.12.0"
     },
     "devDependencies": {
