--- a/apps/html-renderer/packages/generic/package.json
+++ b/apps/html-renderer/packages/generic/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@html-renderer/generic",
-    "version": "1.53.0-alpha.4",
+    "version": "1.53.0",
     "private": true,
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -26,7 +26,7 @@
         "electron": "*"
     },
     "dependencies": {
-        "@sofie-package-manager/api": "1.53.0-alpha.4"
+        "@sofie-package-manager/api": "1.53.0"
     },
     "devDependencies": {
         "rimraf": "^5.0.5"
