--- a/apps/package-manager/app/package.json
+++ b/apps/package-manager/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@package-manager/app",
-    "version": "1.53.0-alpha.4",
+    "version": "1.53.0",
     "private": true,
     "scripts": {
         "build": "yarn rimraf dist && yarn build:main",
@@ -15,7 +15,7 @@
         "typescript": "*"
     },
     "dependencies": {
-        "@package-manager/generic": "1.53.0-alpha.4"
+        "@package-manager/generic": "1.53.0"
     },
     "prettier": "@sofie-automation/code-standard-preset/.prettierrc.json",
     "engines": {
