--- a/apps/package-manager/packages/generic/package.json
+++ b/apps/package-manager/packages/generic/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@package-manager/generic",
-    "version": "1.53.0-alpha.4",
+    "version": "1.53.0",
     "private": true,
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -16,9 +16,9 @@
     },
     "dependencies": {
         "@parcel/watcher": "^2.3.0",
-        "@sofie-package-manager/api": "1.53.0-alpha.4",
-        "@sofie-package-manager/expectation-manager": "1.53.0-alpha.4",
-        "@sofie-package-manager/worker": "1.53.0-alpha.4",
+        "@sofie-package-manager/api": "1.53.0",
+        "@sofie-package-manager/expectation-manager": "1.53.0",
+        "@sofie-package-manager/worker": "1.53.0",
         "data-store": "^4.0.3",
         "deep-extend": "^0.6.0",
         "fast-clone": "^1.5.13",
