--- a/shared/packages/worker/package.json
+++ b/shared/packages/worker/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@sofie-package-manager/worker",
-	"version": "1.53.0-alpha.4",
+	"version": "1.53.0",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"license": "MIT",
@@ -32,7 +32,7 @@
 		"@aws-sdk/client-s3": "^3.943.0",
 		"@aws-sdk/lib-storage": "^3.943.0",
 		"@parcel/watcher": "^2.3.0",
-		"@sofie-package-manager/api": "1.53.0-alpha.4",
+		"@sofie-package-manager/api": "1.53.0",
 		"abort-controller": "^3.0.0",
 		"atem-connection": "^3.2.0",
 		"basic-ftp": "^5.0.5",
