--- a/apps/quantel-http-transformer-proxy/packages/generic/package.json
+++ b/apps/quantel-http-transformer-proxy/packages/generic/package.json
@@ -10,11 +10,11 @@
 		"__test": "jest"
 	},
 	"dependencies": {
+		"@koa/bodyparser": "^6.1.0",
 		"@koa/cors": "^5.0.0",
 		"@sofie-package-manager/api": "1.53.0",
 		"got": "^11.8.6",
 		"koa": "^2.16.1",
-		"koa-bodyparser": "^4.3.0",
 		"koa-range": "^0.3.0",
 		"koa-ratelimit": "^5.0.1",
 		"koa-router": "^12.0.0",
@@ -28,7 +28,6 @@
 	"devDependencies": {
 		"@koa/cors": "^5.0.0",
 		"@types/koa": "^2.13.5",
-		"@types/koa-bodyparser": "^4.3.0",
 		"@types/koa-range": "^0.3.2",
 		"@types/koa-ratelimit": "^5.0.0",
 		"@types/koa-router": "^7.4.4",
